fsm/state_machine_procmacro/tests/trybuild/tuple_more_item_event_variant_fail.rs
extern crate state_machine_trait as rustfsm;

use state_machine_procmacro::fsm;

fsm! {
    name Simple; command SimpleCmd; error Infallible;

    One --(A(Foo, Bar), on_a)--> Two
}

fn main() {}
